# core-data

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pull_request_closed.yml  pull_request_opened.yml  pull_requests_opened.yml
flc_core_data/: hello_world.py
flc_core_data/jira/: issue_description.py
