[tool.poetry]
name = "flc-core-data"
version = "0.1.0"
description = "FLC Data Team Notebook Repo"
license = "Proprietary"
authors = ["FabioCaffarello <fabio.caffarello@gmail.com>"]
maintainers = ["FabioCaffarello <fabio.caffarello@gmail.com>"]
readme = "README.md"
repository = "https://github.com/FLC-Data/flc-core-data"

  [[tool.poetry.packages]]
  include = "flc_core_data"

  [tool.poetry.dependencies]
  python = "^3.8"
  pre-commit = "^2.17.0"
  requests = "^2.27.1"

  [tool.poetry.dev-dependencies]
  flake8 = "3.9.2"

  [tool.poetry.scripts]
  jira-script = "flc_core_data.hello_world:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
